Mejoras en buscador 5x5

--- a/app_movil/pubspec.yaml
+++ b/app_movil/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   share_plus: ^10.1.0
   path_provider: ^2.1.0
   url_launcher: ^6.3.2
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/sounds/beep.mp3
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
