--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,19 @@ app_movil/android/.gradle/
 *.iml
 .DS_Store
 Thumbs.db
+
+# ==================================
+# --- BLINDAJE DE DATOS (NUEVO) ---
+# ==================================
+
+# 1. Ignorar respaldos de base de datos (VITAL)
+*.sql
+*.zip
+*.rar
+*.7z
+/backups/
+/respaldos/
+
+# 2. Ignorar carpeta de fotos (Opcional pero recomendado)
+# Si no quieres llenar tu Git con GB de imágenes, descomenta la siguiente línea:
+# /Fotos_CIF/
